Fix links not wrapping inside inline textarea.

--- a/app/assets/stylesheets/controls.scss
+++ b/app/assets/stylesheets/controls.scss
@@ -7,6 +7,10 @@
     margin: 1.14rem 0 0.912rem 0;
 }
 
+.inline-textarea {
+    word-wrap: break-word;
+}
+
 .date-picker input {
     margin-bottom: 10px !important;
 }
